--- a/src/main/resources/package.xml
+++ b/src/main/resources/package.xml
@@ -1,10 +1,9 @@
 <assembly>
 	<id>bin</id>
-	<!-- 最终打包成一个用于发布的zip文件 -->
+	<!-- 最终打包成一个用于发布的zip文件-->
 	<formats>
 		<format>zip</format>
 	</formats>
-
 	<!-- Adds dependencies to zip package under lib directory -->
 	<dependencySets>
 		<dependencySet>
@@ -26,7 +25,7 @@
 		</fileSet>
 		<fileSet>
 			<directory>conf</directory>
-			<outputDirectory>conf</outputDirectory>
+			<outputDirectory>conf/</outputDirectory>
 			<includes>
 				<include>*</include>
 			</includes>
